--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -143,9 +143,9 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="ماهه"
                 android:id="@+id/textView30"
-                android:layout_alignTop="@+id/textView22"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignBottom="@+id/editText6"
+                android:layout_alignRight="@+id/textView31"
+                android:layout_alignEnd="@+id/textView31" />
 
             <TextView
                 android:layout_width="wrap_content"
