--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -34,12 +34,13 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/editText5"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:inputType="none"
                 android:editable="false"
-                android:contextClickable="false" />
+                android:contextClickable="false"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/linearLayout"
+                android:layout_alignEnd="@+id/linearLayout"
+                android:layout_marginRight="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,9 +59,10 @@
                 android:editable="false"
                 android:ems="10"
                 android:id="@+id/editText6"
-                android:layout_below="@+id/editText5"
-                android:layout_alignRight="@+id/editText5"
-                android:layout_alignEnd="@+id/editText5" />
+                android:layout_below="@+id/textView23"
+                android:layout_toLeftOf="@+id/textView25"
+                android:layout_toStartOf="@+id/textView25"
+                android:layout_marginRight="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,8 +82,9 @@
                 android:ems="10"
                 android:id="@+id/editText7"
                 android:layout_below="@+id/editText6"
-                android:layout_alignRight="@+id/editText6"
-                android:layout_alignEnd="@+id/editText6" />
+                android:layout_toLeftOf="@+id/textView25"
+                android:layout_toStartOf="@+id/textView25"
+                android:layout_marginRight="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -102,8 +105,9 @@
                 android:ems="20"
                 android:id="@+id/editText8"
                 android:layout_above="@+id/editText11"
-                android:layout_alignRight="@+id/editText7"
-                android:layout_alignEnd="@+id/editText7" />
+                android:layout_toLeftOf="@+id/textView28"
+                android:layout_toStartOf="@+id/textView28"
+                android:layout_marginRight="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -124,8 +128,9 @@
                 android:ems="10"
                 android:id="@+id/editText11"
                 android:layout_below="@+id/textView28"
-                android:layout_alignLeft="@+id/editText8"
-                android:layout_alignStart="@+id/editText8" />
+                android:layout_toLeftOf="@+id/textView25"
+                android:layout_toStartOf="@+id/textView25"
+                android:layout_marginRight="30dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -144,8 +149,8 @@
                 android:text="ماهه"
                 android:id="@+id/textView30"
                 android:layout_alignBottom="@+id/editText6"
-                android:layout_alignRight="@+id/textView31"
-                android:layout_alignEnd="@+id/textView31" />
+                android:layout_toLeftOf="@+id/editText6"
+                android:layout_toStartOf="@+id/editText6" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -153,9 +158,9 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="نفر"
                 android:id="@+id/textView31"
-                android:layout_alignTop="@+id/textView25"
-                android:layout_alignRight="@+id/textView32"
-                android:layout_alignEnd="@+id/textView32" />
+                android:layout_above="@+id/linearLayout"
+                android:layout_alignLeft="@+id/editText8"
+                android:layout_alignStart="@+id/editText8" />
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -187,9 +192,9 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="درصد"
                 android:id="@+id/textView32"
-                android:layout_alignTop="@+id/textView28"
-                android:layout_toLeftOf="@+id/editText11"
-                android:layout_toStartOf="@+id/editText11" />
+                android:layout_above="@+id/editText11"
+                android:layout_toLeftOf="@+id/editText8"
+                android:layout_toStartOf="@+id/editText8" />
 
             <LinearLayout
                 android:orientation="horizontal"
