--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -158,7 +158,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="نفر"
                 android:id="@+id/textView31"
-                android:layout_above="@+id/linearLayout"
+                android:layout_toLeftOf="@+id/linearLayout"
                 android:layout_alignLeft="@+id/editText8"
                 android:layout_alignStart="@+id/editText8" />
 
@@ -195,10 +195,8 @@
                 android:layout_above="@+id/editText11"
                 android:layout_toLeftOf="@+id/editText8"
                 android:layout_toStartOf="@+id/editText8" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
+            <ScrollView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout"
                 android:layout_below="@+id/editText11"
@@ -207,6 +205,11 @@
                 android:layout_marginTop="20dp"
                 android:layout_toLeftOf="@+id/textView29"
                 android:layout_toStartOf="@+id/textView29">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
 
                 <ImageButton
                     android:layout_marginRight="2dp"
@@ -300,6 +303,7 @@
                     android:id="@+id/imageButton15" />
 
             </LinearLayout>
+            </ScrollView>
 
         </RelativeLayout>
 
