--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -158,7 +158,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="نفر"
                 android:id="@+id/textView31"
-                android:layout_toLeftOf="@+id/linearLayout"
+                android:layout_all="@+id/linearLayout"
                 android:layout_alignLeft="@+id/editText8"
                 android:layout_alignStart="@+id/editText8" />
 
@@ -195,7 +195,8 @@
                 android:layout_above="@+id/editText11"
                 android:layout_toLeftOf="@+id/editText8"
                 android:layout_toStartOf="@+id/editText8" />
-            <ScrollView
+            <HorizontalScrollView
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/linearLayout"
@@ -303,7 +304,7 @@
                     android:id="@+id/imageButton15" />
 
             </LinearLayout>
-            </ScrollView>
+            </HorizontalScrollView>
 
         </RelativeLayout>
 
