--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -490,7 +490,7 @@
                         android:layout_height="60dp"
                         android:paddingLeft="-20dp"
                         android:paddingTop="-15dp"
-                        android:id="@+id/imageView"
+                        android:id="@+id/Logo_Bank1"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -654,7 +654,7 @@
                         android:layout_height="60dp"
                         android:paddingLeft="-20dp"
                         android:paddingTop="-15dp"
-                        android:id="@+id/imageView2"
+                        android:id="@+id/Logo_Bank2"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -818,7 +818,7 @@
                         android:layout_height="60dp"
                         android:paddingLeft="-20dp"
                         android:paddingTop="-15dp"
-                        android:id="@+id/imageView3"
+                        android:id="@+id/Logo_Bank3"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -983,7 +983,7 @@
                         android:layout_height="60dp"
                         android:paddingLeft="-20dp"
                         android:paddingTop="-15dp"
-                        android:id="@+id/imageView4"
+                        android:id="@+id/Logo_Bank4"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
@@ -1149,7 +1149,7 @@
                         android:layout_height="60dp"
                         android:paddingLeft="-20dp"
                         android:paddingTop="-15dp"
-                        android:id="@+id/imageView5"
+                        android:id="@+id/Logo_Bank5"
                         android:layout_alignParentTop="true"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
