vaamYab search result boxes image fixed

--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -331,7 +331,7 @@
                 android:layout_below="@+id/VamYab_go"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:id="@+id/resultLinearLayout">
+                android:id="@+id/vaamyabResultLinearLayout">
 
 
             </LinearLayout>
